prusti-tests/tests/parse/ui/parse_err.stderr
error: expected expression
 --> $DIR/parse_err.rs:3:18
  |
3 | #[requires(true ++ 1)]
  |                  ^

error: expected expression
 --> $DIR/parse_err.rs:6:17
  |
6 | #[ensures(true ++ 1)]
  |                 ^

error: expected expression
  --> $DIR/parse_err.rs:11:31
   |
11 |         body_invariant!(true ++ 1)
   |                               ^

error: expected expression
  --> $DIR/parse_err.rs:19:31
   |
19 |         body_invariant!(true ++ 1)
   |                               ^

error: expected expression
  --> $DIR/parse_err.rs:24:17
   |
24 | #[ensures(true ++ 1)]
   |                 ^

error: aborting due to 5 previous errors

